--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -56,4 +56,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/chance_rain" />
 
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/cardview_default_elevation"
+        app:layout_constraintBottom_toBottomOf="@id/downloadButton"
+        app:layout_constraintEnd_toEndOf="@id/downloadButton"
+        app:layout_constraintStart_toStartOf="@id/downloadButton"
+        app:layout_constraintTop_toTopOf="@id/downloadButton"
+        tools:targetApi="lollipop" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
